fix: secure authentication and ownership checks with real data verification